// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp Tests should Display GifExpertApp properly 1`] = `
<div>
  <Memo(Text)
    b={false}
    blockquote={false}
    color="default"
    del={false}
    em={false}
    h1={false}
    h2={true}
    h3={false}
    h4={false}
    h5={false}
    h6={false}
    i={false}
    small={false}
    span={false}
    transform="none"
  >
    Gif Expert App
  </Memo(Text)>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;

exports[`GifExpertApp Tests should show a list of categories 1`] = `
<div>
  <Memo(Text)
    b={false}
    blockquote={false}
    color="default"
    del={false}
    em={false}
    h1={false}
    h2={true}
    h3={false}
    h4={false}
    h5={false}
    h6={false}
    i={false}
    small={false}
    span={false}
    transform="none"
  >
    Gif Expert App
  </Memo(Text)>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Avatar"
      key="Avatar"
    />
    <GifGrid
      category="Lord Of Rings"
      key="Lord Of Rings"
    />
  </ol>
</div>
`;
